--- a/distributors.html
+++ b/distributors.html
@@ -37,7 +37,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mx-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="#">Bills</a>
+                                    <a class="nav-link" href="index.html">Bills</a>
                                 </li>
                                 
                                 <li class="nav-item dropdown">
@@ -53,7 +53,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="distributors.html">Distributors</a>
+                                    <a class="nav-link active" href="#">Distributors</a>
                                 </li>
 
                             </ul>
@@ -76,7 +76,7 @@
                         <h2 class="tm-block-title">Insert</h2>
                         <span>Insert into "Distributor"</span>
                         <div class="form-group">
-                            <form action="php/insertDistributor.php" method="POST">
+                            <form action="insertDistributor.php" method="POST">
                                 <label>ID: <input type="text" class="form-control" id="id" name="id"></label><br />
                                 <label>Name: <input type="text" class="form-control" id="name" name="name"></label><br />
                                 <button class="btn btn-small" type="submit">Insert</button>
