--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                                     <a class="nav-link" href="distributors.html">Distributors</a>
                                 </li>
 
+                                <li class="nav-item">
+                                    <a class="nav-link" href="reports.html">Reports</a>
+                                </li>
+
                             </ul>
                             <ul class="navbar-nav">
                                 <li class="nav-item">
