--- a/login.html
+++ b/login.html
@@ -37,18 +37,17 @@
                         <div class="col-12">
                             <form action="index.html" method="post" class="tm-login-form">
                                 <div class="input-group">
-                                    <label for="username" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Username</label>
+                                    <label for="username" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Username:</label>
                                     <input name="username" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7" id="username" value="admin" required>
                                 </div>
                                 <div class="input-group mt-3">
-                                    <label for="password" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Password</label>
+                                    <label for="password" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Password:</label>
                                     <input name="password" type="password" class="form-control validate" id="password" value="1234" required>
                                 </div>
                                 <div class="input-group mt-3">
                                     <button type="submit" class="btn btn-primary d-inline-block mx-auto">Login</button>
                                 </div>
                                 <div class="input-group mt-3">
-                                    <p><em>Just put a character to login.</em></p>
                                 </div>
                             </form>
                         </div>
@@ -59,8 +58,7 @@
         <footer class="row tm-mt-big">
             <div class="col-12 font-weight-light text-center">
                 <p class="d-inline-block tm-bg-black text-white py-2 px-4">
-                    Copyright &copy; 2018 Admin Dashboard . Created by
-                    <a rel="nofollow" href="https://www.tooplate.com" class="text-white tm-footer-link">Tooplate</a>
+                    Copyright &copy; Parth Shah 2019
                 </p>
             </div>
         </footer>
