--- a/reports.html
+++ b/reports.html
@@ -77,64 +77,14 @@
             <div class="row tm-content-row tm-mt-big">
                 <div class="tm-col tm-col-big">
                     <div class="bg-white tm-block h-100">
-                        <h2 class="tm-block-title">Insert</h2>
-                        <span>Insert into "Distributor"</span>
+                        <h2 class="tm-block-title">Reports</h2>
                         <div class="form-group">
-                            <form action="insertDistributor.php" method="POST">
-                                <label>ID: <input type="text" class="form-control" id="id" name="id"></label><br />
-                                <label>Name: <input type="text" class="form-control" id="name" name="name"></label><br />
-                                <button class="btn btn-small" type="submit">Insert</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="tm-col tm-col-big">
-                    <div class="bg-white tm-block h-100">
-                        <h2 class="tm-block-title">Query</h2>
-                        <span>Query "Distributor"</span>
-                        <div class="form-group">
-                            <form>
-                                <button class="btn btn-small" type="button" onclick="queryDistributor();">Query</button>
-                            </form>
-                        </div>
-                        <div id="distributorResult">
-
-                        </div>
-                    </div>
-                </div>
-                <div class="tm-col tm-col-big">
-                    <div class="bg-white tm-block h-100">
-                        <h2 class="tm-block-title">Update</h2>
-                        <span>Update "Distributor"</span>
-                        <div class="form-group">
-                            <form action="updateDistributor.php" method="POST">
-                                <label>ID: <input type="text" class="form-control" id="updateID" name="updateID"></label><br />
-                                <label>Name: <input type="text" class="form-control" id="updateName" name="updateName"></label><br />
-                                <button class="btn btn-small" type="submit">Update</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="tm-col tm-col-big">
-                    <div class="bg-white tm-block h-100">
-                        <h2 class="tm-block-title">Delete</h2>
-                        <span>Delete from "Distributor"</span>
-                        <div class="form-group">
-                            <form action="deleteDistributor.php" method="POST">
-                                <label>ID: <input type="text" class="form-control" id="deleteID" name="deleteID"></label><br />
-                                <button class="btn btn-small" type="submit">Delete</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="tm-col tm-col-big">
-                    <div class="bg-white tm-block h-100">
-                        <h2 class="tm-block-title">Special Queries</h2>
-                        <div class="form-group">
+                            <span>Click to download report and display details.</span>
                             <form>
                                 <button class="btn btn-small" type="button" onclick="top5Products();">Top 5 Products (Highest Price)</button>
                             </form>
                         </div>
+                        <a id="downloadAnchorElem1" style="display: none;"></a>
                         <div id="top5ProductsResult">
                         </div>
                         <div class="form-group">
@@ -142,23 +92,19 @@
                                 <button class="btn btn-small" type="button" onclick="discountsAvailable();">Disounts Available</button>
                             </form>
                         </div>
+                        <a id="downloadAnchorElem2" style="display: none;"></a>
                         <div id="discountsAvailableResult">
                         </div>
                     </div>
                 </div>
-                <div class="tm-col tm-col-big">
-                    <div class="bg-white tm-block h-100">
-                        <h2 class="tm-block-title">Free Query</h2>
-                        <span>Free query "Distributor"</span><br />
-                        <span style="color:red;"><b>UNSAFE</b></span>
-                    </div>
-                </div>
+
 
             </div>
             <footer class="row tm-mt-small">
                 <div class="col-12 font-weight-light">
                     <p class="d-inline-block tm-bg-black text-white py-2 px-4">
-                        Copyright &copy; Parth Shah 2019
+                        Copyright &copy; Rahul, Saahil, Parth, PES University 2019
+
                     </p>
                 </div>
             </footer>
@@ -177,28 +123,23 @@
     <!-- https://getbootstrap.com/ -->
     <script src="js/tooplate-scripts.js"></script>
     <script>
-        function queryDistributor() {
-            var oReq = new XMLHttpRequest();
-            oReq.onload = function () {
-                var objArr = JSON.parse(this.response);
-                console.log(objArr);
-                objArr.forEach(element => {
-                    document.getElementById("distributorResult").innerHTML += element+'<br />';
-                });
-            };
-            oReq.open("get", "queryDistributor.php", true);
-            oReq.send();
-        }
         function top5Products() {
             var oReq = new XMLHttpRequest();
             oReq.onload = function () {
+                // console.log(this.response);
                 var objArr = JSON.parse(this.response);
                 console.log(objArr);
+                var dataStr = "data:text/json;charset=utf-8," + encodeURIComponent(JSON.stringify(objArr));
+                var dlAnchorElem = document.getElementById('downloadAnchorElem1');
+                dlAnchorElem.setAttribute("href",     dataStr     );
+                dlAnchorElem.setAttribute("download", "top5Products.json");
+                dlAnchorElem.click();
+
                 objArr.forEach(element => {
                     document.getElementById("top5ProductsResult").innerHTML += element+'<br />';
                 });
             };
-            oReq.open("get", "top5Products.php", true);
+            oReq.open("get", "php/top5Products.php", true);
             oReq.send();
         }
         function discountsAvailable() {
@@ -206,13 +147,20 @@
             oReq.onload = function () {
                 var objArr = JSON.parse(this.response);
                 console.log(objArr);
+                var dataStr = "data:text/json;charset=utf-8," + encodeURIComponent(JSON.stringify(objArr));
+                var dlAnchorElem = document.getElementById('downloadAnchorElem2');
+                dlAnchorElem.setAttribute("href",     dataStr     );
+                dlAnchorElem.setAttribute("download", "discountsAvailable.json");
+                dlAnchorElem.click();
+
                 objArr.forEach(element => {
                     document.getElementById("discountsAvailableResult").innerHTML += element+'<br />';
                 });
             };
-            oReq.open("get", "discountsAvailable.php", true);
+            oReq.open("get", "php/discountsAvailable.php", true);
             oReq.send();
         }
+        
     </script>
 </body>
 
