--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mx-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html">Bills</a>
+                                    <a class="nav-link active" href="index.html">Bills</a>
                                 </li>
                                 
                                 <li class="nav-item dropdown">
@@ -52,7 +52,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="distributors.html">Distributors</a>
+                                    <a class="nav-link" href="distributors.html">Distributors</a>
                                 </li>
 
                                 <li class="nav-item">
