--- a/products.html
+++ b/products.html
@@ -41,7 +41,7 @@ sah
                                 </li>
                                 
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="products.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                                    <a class="nav-link dropdown-toggle active" href="products.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                                         aria-expanded="false">
                                         Products
                                     </a>
@@ -53,7 +53,7 @@ sah
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="distributors.html">Distributors</a>
+                                    <a class="nav-link" href="distributors.html">Distributors</a>
                                 </li>
 
                                 <li class="nav-item">
