--- a/phones.html
+++ b/phones.html
@@ -45,7 +45,7 @@
                                 </li>
                                 
                                 <li class="nav-item dropdown active">
-                                    <a class="nav-link dropdown-toggle" href="products.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                                    <a class="nav-link dropdown-toggle active" href="products.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                                         aria-expanded="false">
                                         Products
                                     </a>
