--- a/reports.html
+++ b/reports.html
@@ -53,10 +53,10 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="#">Distributors</a>
+                                    <a class="nav-link" href="#">Distributors</a>
                                 </li>
 
-                                <li class="nav-item">
+                                <li class="nav-item active">
                                     <a class="nav-link" href="reports.html">Reports</a>
                                 </li>
 
