--- a/laptops.html
+++ b/laptops.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Add Product - Dashboard Admin Template</title>
+    <title>Add Laptops - Dashboard Admin Template</title>
     <!--
 
     Template 2108 Dashboard
@@ -83,44 +83,73 @@
                 <div class="bg-white tm-block">
                     <div class="row">
                         <div class="col-12">
-                            <h2 class="tm-block-title d-inline-block">Add Product</h2>
+                            <h2 class="tm-block-title d-inline-block">Add Laptops</h2>
                         </div>
                     </div>
                     <div class="row mt-4 tm-edit-product-row">
                         <div class="col-xl-7 col-lg-7 col-md-12">
-                            <form action="" class="tm-edit-product-form">
+                            <form action="php/insertLaptop.php" method="POST" class="tm-edit-product-form">
+                            
                                 <div class="input-group mb-3">
-                                    <label for="name" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Product
-                                        Name
+                                    <label for="ProductID" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Product ID
                                     </label>
-                                    <input id="name" name="name" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7">
+                                    <input id="ProductID" name="ProductID" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7">
                                 </div>
+
                                 <div class="input-group mb-3">
-                                    <label for="description" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 mb-2">Description</label>
-                                    <textarea class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7" rows="3" required></textarea>
-                                </div>
-                                <div class="input-group mb-3">
-                                    <label for="category" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Category</label>
-                                    <select class="custom-select col-xl-9 col-lg-8 col-md-8 col-sm-7" id="category">
-                                        <option selected>Select one</option>
-                                        <option value="1">Cras efficitur lacus</option>
-                                        <option value="2">Pellentesque molestie</option>
-                                        <option value="3">Sed feugiat nulla</option>
-                                    </select>
-                                </div>
-                                <div class="input-group mb-3">
-                                    <label for="expire_date" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Expire
-                                        Date
+                                    <label for="brandName" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Brand Name
                                     </label>
-                                    <input id="expire_date" name="expire_date" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7"
-                                        data-large-mode="true">
+                                    <input id="brandName" name="brandName" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7">
                                 </div>
+
                                 <div class="input-group mb-3">
-                                    <label for="stock" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Units In
-                                        Stock
+                                    <label for="productName" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Product Name
                                     </label>
-                                    <input id="stock" name="stock" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-7 col-sm-7">
+                                    <input id="productName" name="productName" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7">
                                 </div>
+
+                                <div class="input-group mb-3">
+                                    <label for="costPrice" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Cost Price
+                                    </label>
+                                    <input id="costPrice" name="costPrice" type="number" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7">
+                                </div>
+
+                                <div class="input-group mb-3">
+                                    <label for="sellingPrice" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Selling Price
+                                    </label>
+                                    <input id="sellingPrice" name="sellingPrice" type="number" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7">
+                                </div>
+
+                                <div class="input-group mb-3">
+                                    <label for="RAM" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">RAM
+                                    </label>
+                                    <input id="RAM" name="RAM" type="number" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7">
+                                </div>
+
+                                <div class="input-group mb-3">
+                                    <label for="storage" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Storage
+                                    </label>
+                                    <input id="storage" name="storage" type="number" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7">
+                                </div>
+
+                                <div class="input-group mb-3">
+                                    <label for="OS" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Operating System
+                                    </label>
+                                    <input id="OS" name="OS" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7">
+                                </div>
+
+                                <div class="input-group mb-3">
+                                    <label for="display" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Display
+                                    </label>
+                                    <input id="display" name="display" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7">
+                                </div>
+
+                                <div class="input-group mb-3">
+                                    <label for="graphicsCard" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Graphics Card
+                                    </label>
+                                    <input id="graphicsCard" name="graphicsCard" type="number" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7">
+                                </div>
+
                                 <div class="input-group mb-3">
                                     <div class="ml-auto col-xl-8 col-lg-8 col-md-8 col-sm-7 pl-0">
                                         <button type="submit" class="btn btn-primary">Add
@@ -129,7 +158,7 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="col-xl-4 col-lg-4 col-md-12 mx-auto mb-4">
+                        <!--<div class="col-xl-4 col-lg-4 col-md-12 mx-auto mb-4">
                             <div class="tm-product-img-dummy mx-auto">
                                 <i class="fas fa-5x fa-cloud-upload-alt" onclick="document.getElementById('fileInput').click();"></i>
                             </div>
@@ -138,7 +167,7 @@
                                 <input type="button" class="btn btn-primary d-block mx-auto" value="Upload ..." onclick="document.getElementById('fileInput').click();"
                                 />
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
