Display name fixes

--- a/reports.html
+++ b/reports.html
@@ -53,7 +53,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Distributors</a>
+                                    <a class="nav-link" href="distributors.html">Distributors</a>
                                 </li>
 
                                 <li class="nav-item active">
@@ -77,7 +77,7 @@
             <div class="row tm-content-row tm-mt-big">
                 <div class="tm-col tm-col-big">
                     <div class="bg-white tm-block h-100">
-                        <h2 class="tm-block-title">Reports</h2>
+                        <h2 class="Select">Reports</h2>
                         <div class="form-group">
                             <span>Click to download report and display details.</span>
                             <form>
