--- a/distributors.html
+++ b/distributors.html
@@ -79,7 +79,7 @@
                 <div class="row tm-content-row tm-mt-big">
                         <div class="tm-col tm-col-big">
                             <div class="bg-white tm-block h-100">
-                                <h2 class="Select">Options</h2>
+                                <h2 class="Select">Distributors - Options</h2>
                                 
                                         <button class="btn btn-small" onclick="w3.toggleShow('#x1') "> Add </button>
                                         <button class="btn btn-small" onclick="w3.toggleShow('#x2') "> Search </button>
