--- a/login.html
+++ b/login.html
@@ -58,7 +58,8 @@
         <footer class="row tm-mt-big">
             <div class="col-12 font-weight-light text-center">
                 <p class="d-inline-block tm-bg-black text-white py-2 px-4">
-                    Copyright &copy; Parth Shah 2019
+                    Copyright &copy; Rahul, Saahil, Parth, PES University 2019
+
                 </p>
             </div>
         </footer>
