--- a/distributors.html
+++ b/distributors.html
@@ -224,24 +224,8 @@
             oReq.onload = function () {
                 var objArr = JSON.parse(this.response);
                 console.log(objArr);
-                var x = document.createElement("TABLE");
-                x.setAttribute("id", "myTable");
-                x.setAttribute("class", "table");
-
-                document.getElementById("distributorResult").appendChild(x);
                 objArr.forEach(element => {
-                    var y = document.createElement("TR");
-                    y.setAttribute("id", "row");
-                    var z;
-                    element.forEach(value => {
-                        console.log(value);
-                        z = document.createElement("TD");
-                        var t = document.createTextNode(value);
-                        z.appendChild(t);
-                        y.appendChild(z);
-                    });
-                    document.getElementById("myTable").appendChild(y);
-                    // document.getElementById("distributorResult").innerHTML += element+'<br />';
+                    document.getElementById("distributorResult").innerHTML += element+'<br />';
                 });
             };
             oReq.open("get", "php/queryDistributor.php", true);
